--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -3,7 +3,7 @@ name: Generate Sitemap
 on:
   push:
     branches:
-      - main  # Replace with your default branch if it's not 'main'
+      - main 
 
 jobs:
   generate-sitemap:
@@ -26,9 +26,11 @@ jobs:
         run: python generate_sitemap.py
 
       - name: Commit and push sitemap
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add sitemap.xml
           git commit -m "Update sitemap.xml" || echo "No changes to commit"
-          git push origin main  # Replace with your default branch if it's not 'main'
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/sima-njf/sima-njf.github.io.git main  
