--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -25,12 +25,19 @@ jobs:
       - name: Generate sitemap
         run: python generate_sitemap.py
 
-      - name: Commit and push sitemap
+      - name: Commit and Push Changes to `update-sitemap` Branch
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          git checkout -b update-sitemap-${{ github.run_id }}
           git add sitemap.xml
           git commit -m "Update sitemap.xml" || echo "No changes to commit"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/sima-njf/sima-njf.github.io.git main  
+          git push origin update-sitemap-${{ github.run_id }}
+
+      - name: Create Pull Request
+        run: |
+          gh pr create --base main --head update-sitemap-${{ github.run_id }} --title "Update sitemap.xml" --body "Automatically generated sitemap update."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
