--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -27,17 +27,17 @@ jobs:
 
       - name: Commit and Push Changes to `update-sitemap` Branch
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
           git checkout -b update-sitemap-${{ github.run_id }}
           git add sitemap.xml
           git commit -m "Update sitemap.xml" || echo "No changes to commit"
-          git push origin update-sitemap-${{ github.run_id }}
+          git push https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/sima-njf/sima-njf.github.io.git update-sitemap-${{ github.run_id }}
 
       - name: Create Pull Request
         run: |
           gh pr create --base main --head update-sitemap-${{ github.run_id }} --title "Update sitemap.xml" --body "Automatically generated sitemap update."
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
