--- a/.github/workflows/update-file.yml
+++ b/.github/workflows/update-file.yml
@@ -42,14 +42,23 @@ jobs:
       - name: Update Activities File (Only If Issue Triggered)
         if: github.event_name == 'issues'
         run: |
-          ACTIVITIES_FILE="asset/data/activities.json"
+          ACTIVITIES_FILE="/asset/data/activities.json"
+
+          # ✅ Ensure directory exists
+          mkdir -p $(dirname "$ACTIVITIES_FILE")
+
+          # ✅ Ensure file exists
           if [ ! -f "$ACTIVITIES_FILE" ]; then
             echo '{"activities": []}' > "$ACTIVITIES_FILE"
           fi
 
-          echo "Before Update:"
-          cat "$ACTIVITIES_FILE"
+          echo "Checking File Status:"
+          ls -l "$ACTIVITIES_FILE"
 
+          echo "Before Update:"
+          cat "$ACTIVITIES_FILE" || echo "File is empty"
+
+          # ✅ Ensure jq is modifying the file correctly
           jq --arg title "$ACTIVITY_TITLE" \
              --arg image "$ACTIVITY_IMAGE" \
              --arg description "$ACTIVITY_DESCRIPTION" \
@@ -57,16 +66,16 @@ jobs:
              --arg timestamp "$ACTIVITY_TIMESTAMP" \
              '.activities += [{"title": $title, "image": $image, "description": $description, "link": $link, "timestamp": $timestamp}]' "$ACTIVITIES_FILE" > temp.json
 
-          # Debug if jq fails
           if [ $? -ne 0 ]; then
-            echo "Error updating JSON file with jq"
+            echo "❌ Error updating JSON file with jq!"
             exit 1
           fi
 
           mv temp.json "$ACTIVITIES_FILE"
 
           echo "After Update:"
-          cat "$ACTIVITIES_FILE"
+          cat "$ACTIVITIES_FILE" || echo "File is empty after update!"
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
