--- a/.github/workflows/update-file.yml
+++ b/.github/workflows/update-file.yml
@@ -23,7 +23,7 @@ jobs:
           TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
           IMAGE_URL=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Image:\*\* //p' | head -n 1)
-          DESCRIPTION=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Description:\*\* //p' | awk '{printf "%s\\n", $0}')
+          DESCRIPTION=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Description:\*\* //p' | tr '\n' '⏎')
           LINK=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Link:\*\* //p' | head -n 1)
 
           echo "Extracted Values:"
@@ -33,6 +33,7 @@ jobs:
           echo "Link: $LINK"
           echo "Timestamp: $TIMESTAMP"
 
+          # ✅ Store values in GitHub Environment Variables
           echo "ACTIVITY_TITLE=$ISSUE_TITLE" >> $GITHUB_ENV
           echo "ACTIVITY_IMAGE=$IMAGE_URL" >> $GITHUB_ENV
           echo "ACTIVITY_DESCRIPTION=$DESCRIPTION" >> $GITHUB_ENV
@@ -55,10 +56,13 @@ jobs:
           echo "Before Update:"
           cat "$ACTIVITIES_FILE" || echo "❌ File is empty"
 
+          # ✅ Convert "⏎" back to actual newlines before inserting JSON
+          CLEAN_DESCRIPTION=$(echo "$ACTIVITY_DESCRIPTION" | tr '⏎' '\n')
+
           echo "🚀 Running jq update..."
           jq --arg title "$ACTIVITY_TITLE" \
              --arg image "$ACTIVITY_IMAGE" \
-             --arg description "$ACTIVITY_DESCRIPTION" \
+             --arg description "$CLEAN_DESCRIPTION" \
              --arg link "$ACTIVITY_LINK" \
              --arg timestamp "$ACTIVITY_TIMESTAMP" \
              '.activities += [{"title": $title, "image": $image, "description": $description, "link": $link, "timestamp": $timestamp}]' "$ACTIVITIES_FILE" > temp.json
