--- a/.github/workflows/update-file.yml
+++ b/.github/workflows/update-file.yml
@@ -23,7 +23,7 @@ jobs:
           TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
           IMAGE_URL=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Image:\*\* //p' | head -n 1)
-          DESCRIPTION=$(echo "$ISSUE_BODY" | awk 'BEGIN {found=0} /^\*\*Description:\*\*/ {found=1; next} found {print}')
+          DESCRIPTION=$(echo "$ISSUE_BODY" | awk 'BEGIN {found=0} /^\*\*Description:\*\*/ {found=1; next} /^\*\*Link:\*\*/ {found=0} found {print}')
           LINK=$(echo "$ISSUE_BODY" | sed -n 's/\*\*Link:\*\* //p' | head -n 1)
 
           echo "Extracted Values:"
